# OpenSeason

./: CMakeLists.txt  CONTRIBUTORS.md  README.md  duckstation.sln  openseason.sln
.github/workflows/: rolling-release.yml
CMakeModules/: DuckStationBuildOptions.cmake  DuckStationBuildSummary.cmake  DuckStationDependencies.cmake  FindDiscordRPC.cmake  FindLibbacktrace.cmake  FindSoundTouch.cmake  Findminizip-ng.cmake  Findspirv_cross_c.cmake  FindxxHash.cmake  OpenSeasonBuildOptions.cmake  OpenSeasonBuildSummary.cmake  OpenSeasonDependencies.cmake  OpenSeasonUtils.cmake
data/: CMakeLists.txt
data/resources/: chtdb.txt  thirdparty.html
data/resources/shaders/reshade/Shaders/: CRT-Guest-NTSC.fx
data/resources/shaders/reshade/Shaders/crt/: crt-royale.fx
data/resources/shaders/reshade/Shaders/crt/crt-royale/include/: scanline-functions.fxh
dep/: CMakeLists.txt
dep/imgui/src/: imgui.cpp  imgui_draw.cpp
extra/scripts/: generate-metainfo.sh  generate_update_fa_glyph_ranges.py  io.github.ForkingField.OpenSeason.desktop  io.github.ForkingField.OpenSeason.metainfo.xml.in  run_regression_tests.py
scripts/: generate_fullscreen_ui_translation_strings.py  generate_update_fa_glyph_ranges.py
scripts/appimage/: make-appimage.sh
scripts/appimage/apprun-hooks/: default-to-x11.sh
scripts/flatpak/: .gitignore  io.github.ForkingField.OpenSeason.yaml
source/: CMakeLists.txt
source/common/: CMakeLists.txt  common.vcxproj  common.vcxproj.filters  crash_handler.cpp  file_system.cpp  gsvector_dispatch.h  gsvector_formatter.h  gsvector_matrix.cpp  gsvector_matrix.h  gsvector_simd_avx2.h  gsvector_simd_scalar.h  gsvector_simd_sse2.h  gsvector_simd_sse4.h  intrin.h  log.cpp  memmap.cpp  small_string.h
source/common-tests/: gsvector_yuvtorgb_test.cpp  rectangle_tests.cpp
source/core/: CMakeLists.txt  achievements.cpp  cdrom.cpp  cheats.cpp  fullscreen_ui.cpp  gpu_hw.h  gpu_sw.cpp  gpu_sw_rasterizer.cpp  gpu_sw_rasterizer.inl  gpu_sw_rasterizer_avx2.cpp  gpu_types.h  host.cpp  imgui_overlays.cpp  mdec.cpp  pine_server.cpp  settings.cpp  system.cpp  texture_replacements.cpp
source/duckstation-qt/: CMakeLists.txt  qthost.cpp  qttranslations.cpp
source/duckstation-qt/translations/: duckstation-qt_de.ts  duckstation-qt_es-ES.ts  duckstation-qt_es.ts  duckstation-qt_fr.ts  duckstation-qt_he.ts  duckstation-qt_id.ts  duckstation-qt_it.ts  duckstation-qt_ja.ts  duckstation-qt_ko.ts  duckstation-qt_nl.ts  duckstation-qt_pl.ts  duckstation-qt_pt-BR.ts  duckstation-qt_pt-PT.ts  duckstation-qt_ru.ts  duckstation-qt_tr.ts  duckstation-qt_zh-CN.ts  update-and-edit-language.sh
source/duckstation-regtest/: CMakeLists.txt
source/openseason-qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  achievementsettingswidget.cpp  biossettingswidget.ui  cheatmanagerwindow.cpp  controllerbindingwidget_guncon.ui  controllerbindingwidget_justifier.ui  controllersettingswindow.ui  debuggerwindow.ui  gamelistmodel.cpp  gamesummarywidget.cpp  interfacesettingswidget.ui  openseason-qt.rc  openseason-qt.vcxproj  openseason-qt.vcxproj.filters  qthost.cpp  qttranslations.cpp  resource.h  settingswindow.ui  setupwizarddialog.cpp  update_translations.bat
source/openseason-qt/translations/: openseason-qt_de.ts  openseason-qt_en.ts  openseason-qt_es-ES.ts  openseason-qt_es.ts  openseason-qt_fr.ts  openseason-qt_he.ts  openseason-qt_id.ts  openseason-qt_it.ts  openseason-qt_ja.ts  openseason-qt_ko.ts  openseason-qt_nl.ts  openseason-qt_pl.ts  openseason-qt_pt-BR.ts  openseason-qt_pt-PT.ts  openseason-qt_ru.ts  openseason-qt_tr.ts  openseason-qt_zh-CN.ts  update-and-edit-english.bat  update-and-edit-language.sh  update_glyph_ranges.py
source/openseason-regtest/: CMakeLists.txt  regtest_host.cpp
source/util/: CMakeLists.txt  audio_stream.cpp  cd_image_chd.cpp  cubeb_audio_stream.cpp  d3d_common.cpp  gpu_device.cpp  gpu_device.h  gpu_texture.h  imgui_fullscreen.cpp  imgui_manager.cpp  media_capture.cpp  postprocessing_shader.h  util.props  vulkan_device.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  gsvector_sse.h  progress_callback.cpp  progress_callback.h
src/core/: CMakeLists.txt  achievements.cpp  bios.cpp  bus.cpp  cpu_code_cache.cpp  fullscreen_ui.cpp  gpu_sw_rasterizer.inl
src/duckstation-qt/: CMakeLists.txt  aboutdialog.cpp  achievementsettingswidget.cpp  qthost.cpp
src/openseason-qt/: CMakeLists.txt  Info.plist.in  aboutdialog.cpp  achievementlogindialog.cpp  achievementlogindialog.ui  achievementsettingswidget.cpp  advancedsettingswidget.cpp  audiosettingswidget.ui  controllerbindingwidget_mouse.ui  controllersettingswindow.cpp  coverdownloaddialog.ui  displaywidget.cpp  mainwindow.cpp  mainwindow.ui  qthost.cpp  qtprogresscallback.cpp  qttranslations.cpp  settingswindow.cpp  setupwizarddialog.ui  vcruntimecheck.cpp
src/openseason-qt/resources/: openseason-qt.qrc
src/openseason-qt/translations/: create-update-and-edit-language.bat  openseason-qt_id.ts  openseason-qt_it.ts  openseason-qt_nl.ts  openseason-qt_pl.ts  openseason-qt_pt-BR.ts  openseason-qt_tr.ts  update-and-edit-language.bat
src/openseason-regtest/: CMakeLists.txt
src/scmversion/: update_rc_version.bat
src/util/: CMakeLists.txt  audio_stream.cpp  audio_stream.h  gpu_device.cpp  platform_misc_unix.cpp
